crates/ruff_python_resolver/src/snapshots/ruff_python_resolver__tests__airflow_implicit_native_module.snap
---
source: crates/ruff_python_resolver/src/lib.rs
expression: result
---
ImportResult {
    is_relative: false,
    is_import_found: true,
    is_partly_resolved: false,
    is_namespace_package: false,
    is_init_file_present: true,
    is_stub_package: false,
    import_type: ThirdParty,
    resolved_paths: [
        "./resources/test/airflow/venv/lib/python3.11/site-packages/orjson/__init__.pyi",
    ],
    search_path: Some(
        "./resources/test/airflow/venv/lib/python3.11/site-packages",
    ),
    is_stub_file: true,
    is_native_lib: false,
    is_stdlib_typeshed_file: false,
    is_third_party_typeshed_file: false,
    is_local_typings_file: false,
    implicit_imports: {
        "orjson": ImplicitImport {
            is_stub_file: false,
            is_native_lib: true,
            name: "orjson",
            path: "./resources/test/airflow/venv/lib/python3.11/site-packages/orjson/orjson.cpython-311-darwin.so",
            py_typed: None,
        },
    },
    filtered_implicit_imports: {},
    non_stub_import_result: Some(
        ImportResult {
            is_relative: false,
            is_import_found: true,
            is_partly_resolved: false,
            is_namespace_package: false,
            is_init_file_present: true,
            is_stub_package: false,
            import_type: ThirdParty,
            resolved_paths: [
                "./resources/test/airflow/venv/lib/python3.11/site-packages/orjson/__init__.py",
            ],
            search_path: Some(
                "./resources/test/airflow/venv/lib/python3.11/site-packages",
            ),
            is_stub_file: false,
            is_native_lib: false,
            is_stdlib_typeshed_file: false,
            is_third_party_typeshed_file: false,
            is_local_typings_file: false,
            implicit_imports: {
                "orjson": ImplicitImport {
                    is_stub_file: false,
                    is_native_lib: true,
                    name: "orjson",
                    path: "./resources/test/airflow/venv/lib/python3.11/site-packages/orjson/orjson.cpython-311-darwin.so",
                    py_typed: None,
                },
            },
            filtered_implicit_imports: {},
            non_stub_import_result: None,
            py_typed_info: Some(
                PyTypedInfo {
                    py_typed_path: "./resources/test/airflow/venv/lib/python3.11/site-packages/orjson/py.typed",
                    is_partially_typed: false,
                },
            ),
            package_directory: Some(
                "./resources/test/airflow/venv/lib/python3.11/site-packages/orjson",
            ),
        },
    ),
    py_typed_info: Some(
        PyTypedInfo {
            py_typed_path: "./resources/test/airflow/venv/lib/python3.11/site-packages/orjson/py.typed",
            is_partially_typed: false,
        },
    ),
    package_directory: Some(
        "./resources/test/airflow/venv/lib/python3.11/site-packages/orjson",
    ),
}
